syntax = "proto3";

package usrv.pb.user;
option go_package = "mithril-micro/vsrv/api/gen;vsrvpb";

service UserService {
  rpc CreateUser(CreateUserReq) returns (CreateUserRes);
  rpc GetUser(GetUserReq) returns (User);
  rpc UpdateUser(UpdateUserReq) returns (UpdateUserRes);
}

message User {
  int64 user_id = 1;
  string email = 2;
  string password = 3;
  string phone = 4;
  string avatar = 5;
  int64 created_at = 6;
  enum Gender {
    None = 0;
    Male = 1;
    Female = 2;
  }
  Gender gender = 7;
  string nickname = 8;
}

message CreateUserReq {
  string email = 2;
  string password = 3;
  string phone = 4;
  string avatar = 5;
  string nickname = 6;
}

message CreateUserRes { string msg = 1; }

message UpdateUserReq {
  int64 user_id = 1;
  string email = 2;
  string password = 3;
  string phone = 4;
  string avatar = 5;
  string nickname = 6;
}

message UpdateUserRes { bool ok = 1; }

message GetUserReq { int64 user_id = 1; }

message GetUserRes { User user = 1; }